--- a/liferay/Dockerfile
+++ b/liferay/Dockerfile
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=liferay/dxp:7.3.10-ga1
+ARG BASE_IMAGE=liferay/dxp:7.3.10-dxp-1
 FROM ${BASE_IMAGE}
 
 ADD --chown=liferay:liferay https://raw.githubusercontent.com/eficode/wait-for/master/wait-for /usr/local/bin/
