Upgraded to 7.3 FP2

--- a/liferay/files/portal-ext.properties
+++ b/liferay/files/portal-ext.properties
@@ -1,6 +1,8 @@
 locales.enabled=en_US,es_ES,ca_ES,zh_CN,nl_NL,fi_FI,fr_FR,de_DE,iw_IL,hu_HU,ja_JP,pt_BR
 company.security.strangers.verify=false
 
+index.on.startup=true
+
 upgrade.database.auto.run=true
 database.indexes.update.on.startup=true
 
